# quiz-runner

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
data/: Makefile.am  main-window.ui  quiz-runner.desktop  quiz-runner.desktop.in  quiz-runner.gresource.xml
m4/: ax_append_link_flags.m4  ax_check_enable_debug.m4  ax_compiler_flags.m4  ax_compiler_flags_cflags.m4  ax_compiler_flags_gir.m4  ax_compiler_flags_ldflags.m4  ax_generate_changelog.m4
po/: Makevars  POTFILES  POTFILES.in  hu.po  quiz-runner.pot
src/: Makefile.am  main.vala  quiz-runner-window.vala  quiz-runner.vala
vapi/: config.vapi
